Restarted Website with New Mockup

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Ryann Green | Web Design</title>
 
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
+
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -11,59 +13,76 @@
     <nav>
       <img id="logo" src="img/logo.png" alt="Ryann Green Logo" />
       <ul>
-        <li><a href="work.html">WORK</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="work.html">About</a></li>
+        <li><a href="about.html">Work</a></li>
+        <li><a href="contact.html">Writing</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html">Social</a></li>
       </ul>
     </nav>
   </div>
 
-  <div id="outer-head">
+  <div id="main-page">
     <div id="head-container">
-      <h1>Design + Develop</h1>
-      <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+      <div id="head-info">
+        <h1>Design + Develop</h1>
+        <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
 
-      <a class="line-link" href="about.html">about me</a>
-    </div>
-  </div>
-
-  <div id="main-container">
-    <div class="row" id="selu-homecoming">
-      <div class="column">
-        <img src="img/filler.jpg" alt="Project Name" />
-      </div>
-      <div class="column project-info">
-        <h2>Southeastern Homecoming Site</h2>
-        <p class="project-scope">web design</p>
-        <p class="project-date">2015</p>
-        <p>A website to provide Southeastern Louisiana University with a consistent website for their annual homecoming.</p>
-        <button class="more"><a href="#">View More</a></button>
+        <button class="btn" id="work"><a class="line-link" href="work.html">About Me</a></button>
       </div>
     </div>
 
-    <hr />
+    <div id="work-container">
+      <div class="row" id="selu-homecoming">
+        <div class="column">
+          <img src="img/filler1.jpg" alt="Project Name" />
+        </div>
+        <div class="column">
+          <img src="img/filler2.jpg" alt="Project Name" />
+        </div>
+      </div>
 
-    <div class="row">
-      <div class="column project-info">
-        <h2>Southeastern Homecoming Site</h2>
-        <p class="project-scope">web design</p>
-        <p class="project-date">2015</p>
-        <p>A website to provide Southeastern Louisiana University with a consistent website for their annual homecoming.</p>
-        <button class="more"><a href="#">View More</a></button>
-      </div>
-      <div class="column">
-        <img src="img/filler.jpg" alt="Project Name" />
-      </div>
+      <button class="btn" id="work"><a class="line-link" href="work.html">See All Work</a></button>
     </div>
 
-    <a class="line-link" href="work.html">view all work</a>
-  </div>
+    <div id="write-container">
+      <div id="inner-write">
+        <div class="row" id="selu-homecoming">
+          <div class="column">
+            <h3>Southeastern Alumni Site</h3>
+            <p class="date">October 22, 2015</p>
 
-  <div id="footer-container">
-    <ul>
-      <li><a href="twitter.com">Twitter</a></li>
-      <li><a href="dribbble.com">Dribbble</a></li>
-      <li><a href="mailto:me@ryanngreen.com">Email</a></li>
-    </ul>
+            <p>A brief description of the project scope and requirements. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque commodo molestie. Donec tincidunt fringilla odio, sit amet consectetur lacus blandit eget. Duis ac nunc a dolor commodo consectetur. Nulla et justo tellus. Sed egestas porttitor enim, quis mattis felis tempor vitae. Aliquam rhoncus congue justo, et porttitor est ultrices eget.</p>
+
+            <p class="more"><a href="#">Read More</a></p>
+          </div>
+
+          <div class="column">
+            <h3>Southeastern Alumni Site</h3>
+            <p class="date">October 22, 2015</p>
+
+            <p>A brief description of the project scope and requirements. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque commodo molestie. Donec tincidunt fringilla odio, sit amet consectetur lacus blandit eget. Duis ac nunc a dolor commodo consectetur. Nulla et justo tellus. Sed egestas porttitor enim, quis mattis felis tempor vitae. Aliquam rhoncus congue justo, et porttitor est ultrices eget.</p>
+
+            <p class="more"><a href="#">Read More</a></p>
+          </div>
+        </div>
+      </div>
+      <button class="btn" id="work"><a class="line-link" href="work.html">See All Articles</a></button>
+    </div>
+
+    <div id="contact-container">
+        <p>Do you have a project that you need help with? Is your website not living up to its full potential? I would love to work with you to maximize your business's web presence! </p>
+
+        <h4><span>Contact</span> me@ryanngreen.com</h4>
+    </div>
+
+    <div id="footer-container">
+      <ul>
+        <li><a href="twitter.com"><img src="img/twitter.png" alt="Twitter Logo" /></a></li>
+        <li><a href="dribbble.com"><img src="img/dribbble.png" alt="Dribbble Logo" /></a></li>
+        <li><a href="github.com"><img src="img/github.png" alt="Github Logo" /></a></li>
+        <li><a href="mailto:me@ryanngreen.com"><img src="img/email.png" alt="Email Me" /></a></li>
+      </ul>
+    </div>
   </div>
 </body>
