--- a/about.html
+++ b/about.html
@@ -22,18 +22,16 @@
     </nav>
   </div>
 
-  <div id="main-page" class="home-page">
+  <div id="main-page" class="about-page">
     <div id="head-container">
       <div id="head-info">
-        <h1>Design + Develop</h1>
+        <h1>Nice to Meet You</h1>
         <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
-
-        <button class="btn" id="work"><a class="line-link" href="about.html">About Me</a></button>
       </div>
     </div>
 
     <div id="work-container">
-      <div class="row">
+      <div class="row" id="selu-homecoming">
         <div class="column">
           <img src="img/filler1.jpg" alt="Project Name" />
           <div class="work-overview">
@@ -57,35 +55,9 @@
       <button class="btn" id="work"><a class="line-link" href="work.html">See All Work</a></button>
     </div>
 
-    <div id="write-container">
-      <div id="inner-write">
-        <div class="row" id="selu-homecoming">
-          <div class="column">
-            <h3>Southeastern Alumni Site</h3>
-            <p class="date">October 22, 2015</p>
 
-            <p>A brief description of the project scope and requirements. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque commodo molestie. Donec tincidunt fringilla odio, sit amet consectetur lacus blandit eget. Duis ac nunc a dolor commodo consectetur. Nulla et justo tellus. Sed egestas porttitor enim, quis mattis felis tempor vitae. Aliquam rhoncus congue justo, et porttitor est ultrices eget.</p>
 
-            <p class="more"><a href="#">Read More</a></p>
-          </div>
-
-          <div class="column">
-            <h3>Southeastern Alumni Site</h3>
-            <p class="date">October 22, 2015</p>
-
-            <p>A brief description of the project scope and requirements. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque commodo molestie. Donec tincidunt fringilla odio, sit amet consectetur lacus blandit eget. Duis ac nunc a dolor commodo consectetur. Nulla et justo tellus. Sed egestas porttitor enim, quis mattis felis tempor vitae. Aliquam rhoncus congue justo, et porttitor est ultrices eget.</p>
-
-            <p class="more"><a href="#">Read More</a></p>
-          </div>
-        </div>
-      </div>
-      <button class="btn" id="work"><a class="line-link" href="work.html">See All Articles</a></button>
-    </div>
-
-    <a name="contact"></a>
     <div id="contact-container">
-        <p>Do you have a project that you need help with? Is your website not living up to its full potential? I would love to work with you to maximize your business's web presence! </p>
-
         <h4><span>Contact</span> me@ryanngreen.com</h4>
     </div>
 
