Added Desktop for Highlight and About pages
Need to add copy and make responsive.

--- a/homecoming.html
+++ b/homecoming.html
@@ -6,6 +6,12 @@
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
 
   <link href="css/styles.css" rel="stylesheet" type="text/css" />
+
+  <style>
+  .highlight-page.homecoming #head-container {
+    background: #42a06c;
+  }
+  </style>
 </head>
 
 <body>
@@ -22,36 +28,36 @@
     </nav>
   </div>
 
-  <div id="main-page" class="about-page">
+  <div id="main-page" class="highlight-page homecoming">
     <div id="head-container">
       <div id="head-info">
-        <h1>Nice to Meet You</h1>
+        <h1>Homecoming Site</h1>
         <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
       </div>
+
+      <img src="img/hc_mock.png" alt="Homecoming Responsive" />
     </div>
 
-    <div id="work-container">
-      <div class="row">
-        <div class="column">
-          <img src="img/design.png" alt="Design" />
-          <div class="about-section">
-            <p>Stuff about design and process. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences. </p>
-          </div>
-        </div>
-        <div class="column">
-          <img src="img/develop.png" alt="Develop" />
-          <div class="about-section">
-            <p>Stuff about development and abilities. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
-          </div>
-        </div>
+    <div id="pages-container">
+      <div class="highlight-header">
+        <h2>Homecoming Homepage</h2>
+        <p>I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
       </div>
-      <div class="narrow-row">
-          <p>An explanation about tying the two together and how they work well. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
-      </div>
+      <img src="img/hc_feat.jpg" alt="Homecoming Home Page" />
     </div>
 
-    <div id="contact-container">
-        <h4><span>Contact</span> me@ryanngreen.com</h4>
+    <div id="color-container">
+      <div class="highlight-header">
+        <h2>Color Palette</h2>
+      </div>
+      <img src="img/hc_colors.jpg" alt="Homecoming Color Scheme" />
+    </div>
+
+    <div id="type-container">
+      <div class="highlight-header">
+        <h2>Typography</h2>
+      </div>
+      <img src="img/hc_type.jpg" alt="Homecoming Typography" />
     </div>
 
     <a name="social"></a>
