--- a/index.html
+++ b/index.html
@@ -34,24 +34,28 @@
 
     <div id="work-container">
       <div class="row">
-        <div class="column">
-          <img src="img/filler1.jpg" alt="Project Name" />
-          <div class="work-overview">
-            <p class="work-title">Southeastern Alumni Site</p>
-            <p class="work-spec">Web Design, HTML, CSS <br />
+        <a href="homecoming.html">
+          <div class="column">
+            <img src="img/filler1.jpg" alt="Project Name" />
+            <div class="work-overview">
+              <p class="work-title">Southeastern Alumni Site</p>
+              <p class="work-spec">Web Design, HTML, CSS <br />
+                2015</p>
+              <p class="work-desc">A brief description of the project scope and requirements.</p>
+            </div>
+          </div>
+        </a>
+        <a href="homecoming.html">
+          <div class="column">
+            <img src="img/filler2.jpg" alt="Project Name" />
+            <div class="work-overview">
+              <p class="work-title">Southeastern Alumni Site</p>
+              <p class="work-spec">Web Design, HTML, CSS <br />
               2015</p>
-            <p class="work-desc">A brief description of the project scope and requirements.</p>
+              <p class="work-desc">A brief description of the project scope and requirements.</p>
+            </div>
           </div>
-        </div>
-        <div class="column">
-          <img src="img/filler2.jpg" alt="Project Name" />
-          <div class="work-overview">
-            <p class="work-title">Southeastern Alumni Site</p>
-            <p class="work-spec">Web Design, HTML, CSS <br />
-            2015</p>
-            <p class="work-desc">A brief description of the project scope and requirements.</p>
-          </div>
-        </div>
+        </a>
       </div>
 
       <button class="btn" id="work"><a class="line-link" href="work.html">See All Work</a></button>
