--- a/work.html
+++ b/work.html
@@ -38,44 +38,52 @@
 
     <div id="work-container">
       <div class="row">
-        <div class="column">
-          <img src="img/filler1.jpg" alt="Project Name" />
-          <div class="work-overview">
-            <p class="work-title">Southeastern Homecoming Site</p>
-            <p class="work-spec">Web Design, Photoshop <br />
-              2015</p>
-            <p class="work-desc">A redesign of the Southeastern Homecoming site to provide a recognizable look despite changing themes each year.</p>
+        <a href="homecoming.html">
+          <div class="column">
+            <img src="img/filler1.jpg" alt="Project Name" />
+            <div class="work-overview">
+              <p class="work-title">Southeastern Homecoming Site</p>
+              <p class="work-spec">Web Design, Photoshop <br />
+                2015</p>
+              <p class="work-desc">A redesign of the Southeastern Homecoming site to provide a recognizable look despite changing themes each year.</p>
+            </div>
           </div>
-        </div>
-        <div class="column">
-          <img src="img/filler2.jpg" alt="Project Name" />
-          <div class="work-overview">
-            <p class="work-title">Timeless Vintage Rentals</p>
-            <p class="work-spec">Web Design, HTML, CSS, PHP <br />
-            2014</p>
-            <p class="work-desc">A website for a local wedding rental business, including displaying her inventory dynamically. </p>
-          </div>
-        </div>
-      </div>
-      <div class="row" id="selu-homecoming">
-        <div class="column">
-          <img src="img/filler1.jpg" alt="Project Name" />
-          <div class="work-overview">
-            <p class="work-title">Warmth, Hobby Site</p>
-            <p class="work-spec">Design, HTML, CSS, Photography <br />
+        </a>
+        <a href="homecoming.html">
+          <div class="column">
+            <img src="img/filler2.jpg" alt="Project Name" />
+            <div class="work-overview">
+              <p class="work-title">Timeless Vintage Rentals</p>
+              <p class="work-spec">Web Design, HTML, CSS, PHP <br />
               2014</p>
-            <p class="work-desc">A website gathering resources to teach basic knitting skills to the every day visitor.</p>
+              <p class="work-desc">A website for a local wedding rental business, including displaying her inventory dynamically. </p>
+            </div>
           </div>
-        </div>
-        <div class="column">
-          <img src="img/filler2.jpg" alt="Project Name" />
-          <div class="work-overview">
-            <p class="work-title">Southeastern Alumni Site</p>
-            <p class="work-spec">Web Design, HTML, CSS <br />
-            2015</p>
-            <p class="work-desc">A brief description of the project scope and requirements.</p>
+        </a>
+      </div>
+      <div class="row">
+        <a href="homecoming.html">
+          <div class="column">
+            <img src="img/filler1.jpg" alt="Project Name" />
+            <div class="work-overview">
+              <p class="work-title">Warmth, Hobby Site</p>
+              <p class="work-spec">Design, HTML, CSS, Photography <br />
+                2014</p>
+              <p class="work-desc">A website gathering resources to teach basic knitting skills to the every day visitor.</p>
+            </div>
           </div>
-        </div>
+        </a>
+        <a href="homecoming.html">
+          <div class="column">
+            <img src="img/filler2.jpg" alt="Project Name" />
+            <div class="work-overview">
+              <p class="work-title">Southeastern Alumni Site</p>
+              <p class="work-spec">Web Design, HTML, CSS <br />
+              2015</p>
+              <p class="work-desc">A brief description of the project scope and requirements.</p>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
 
