--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <div id="head-container">
       <div id="head-info">
         <h1>Nice to Meet You</h1>
-        <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+        <p>Running a business is a busy job, and as important as the web is for your success, it can be complicated and time consuming. That's what I'm here for. I can design and code your website, so that you can make less stops and get better results.</p>
       </div>
     </div>
 
@@ -35,18 +35,18 @@
         <div class="column">
           <img src="img/design.png" alt="Design" />
           <div class="about-section">
-            <p>Stuff about design and process. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences. </p>
+            <p>I have an eye for design, along with a desire to create a website that is exactly what your visitor needs. Throughout the design process, there will be constant communication with you, eliminating wasted resources and pin pointing exactly what your website should contain. These days, a beautiful design is not all a website needs in order for your business to grow. It needs content to back the aesthetics. Together, we will get to the root of what valuable content you need, and make it speak volumes.  </p>
           </div>
         </div>
         <div class="column">
           <img src="img/develop.png" alt="Develop" />
           <div class="about-section">
-            <p>Stuff about development and abilities. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+            <p>Sometimes, there can be a disconnect between a designer's vision and the developer's end result. By hiring one person to do both, you can rest easy knowing that even the small details of the design will be executed in the final product. This is where your site will really transform from a pretty picture to an evolving, interactive experience for your visitors. Do you need a shop, contact forms, item inventory? This is where all of those things start truly coming to life. </p>
           </div>
         </div>
       </div>
       <div class="narrow-row">
-          <p>An explanation about tying the two together and how they work well. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+          <p>Let me design a website for you that will help take your business to the next level. I have a passion for design and for code. I feel that they are two sides of the same coin. But even more than that, I want to help you and work with you to come up with a solution for your business that is custom to you. Every business faces different challenges and has different goals. In the same way that your website should feel personal to your visitors, the process I take to build your website will be personal to you. Are you ready to take the next step for your business?</p>
       </div>
     </div>
 
