Added work content and fixed styles

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
     <a name="contact"></a>
     <div id="contact-container">
-        <p>Do you have a project that you need help with? Is your website not living up to its full potential? I would love to work with you to maximize your business's web presence! </p>
+      <div class="narrow-row">
+        <p >Do you have a project that you need help with? Is your website not living up to its full potential? I would love to work with you to maximize your business's web presence! </p>
+      </div>
 
         <h4><span>Contact</span> me@ryanngreen.com</h4>
     </div>
