--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
     <div id="head-container">
       <div id="head-info">
         <h1>Collected Works</h1>
-        <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+        <p>I specialize in creating websites for small businesses that are looking to increase their business and improve their online presence. Over the last few years I have worked on a variety of web projects, ranging from solely design, front-end coding, and even creating dynamic sites. </p>
       </div>
     </div>
 
