--- a/homecoming.html
+++ b/homecoming.html
@@ -18,13 +18,21 @@
   <div id="navigation-container">
     <nav>
       <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" /></a>
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="contact.html">Writing</a></li>
-        <li><a href="index.html#contact">Contact</a></li>
-        <li><a href="#social">Social</a></li>
-      </ul>
+      <input type="checkbox" id="mobile-menu" name="menu">
+      <label for="mobile-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      <div id="test">
+        <ul id="your-menu">
+          <li><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Writing</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="#social">Social</a></li>
+        </ul>
+      </div>
     </nav>
   </div>
 
