--- a/work/homecoming.html
+++ b/work/homecoming.html
@@ -5,7 +5,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
 
-  <link href="css/styles.css" rel="stylesheet" type="text/css" />
+  <link href="../css/styles.css" rel="stylesheet" type="text/css" />
 
   <style>
   .highlight-page.homecoming #head-container {
@@ -17,7 +17,7 @@
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="index.html"><img id="logo" src="img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" /></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -26,10 +26,10 @@
       </label>
       <div id="test">
         <ul id="your-menu">
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Writing</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="../work.html">Work</a></li>
+          <li><a href="../contact.html">Writing</a></li>
+          <li><a href="../index.html#contact">Contact</a></li>
           <li><a href="#social">Social</a></li>
         </ul>
       </div>
@@ -43,7 +43,7 @@
         <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
       </div>
 
-      <img src="img/hc_mock.png" alt="Homecoming Responsive" />
+      <img src="../img/homecoming/hc_mock.png" alt="Homecoming Responsive" />
     </div>
 
     <div id="pages-container">
@@ -51,30 +51,30 @@
         <h2>Homecoming Homepage</h2>
         <p>I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
       </div>
-      <img src="img/hc_feat.jpg" alt="Homecoming Home Page" />
+      <img src="../img/homecoming/hc_feat.jpg" alt="Homecoming Home Page" />
     </div>
 
     <div id="color-container">
       <div class="highlight-header">
         <h2>Color Palette</h2>
       </div>
-      <img src="img/hc_colors.jpg" alt="Homecoming Color Scheme" />
+      <img src="../img/homecoming/hc_colors.jpg" alt="Homecoming Color Scheme" />
     </div>
 
     <div id="type-container">
       <div class="highlight-header">
         <h2>Typography</h2>
       </div>
-      <img src="img/hc_type.jpg" alt="Homecoming Typography" />
+      <img src="../img/homecoming/hc_type.jpg" alt="Homecoming Typography" />
     </div>
 
     <a name="social"></a>
     <div id="footer-container">
       <ul>
-        <li><a href="https://twitter.com/CodeRyann"><img src="img/twitter_y.png" alt="Twitter Logo" /></a></li>
-        <li><a href="https://dribbble.com/regreen"><img src="img/dribbble_y.png" alt="Dribbble Logo" /></a></li>
-        <li><a href="https://github.com/ryanngreen"><img src="img/github_y.png" alt="Github Logo" /></a></li>
-        <li><a href="mailto:me@ryanngreen.com"><img src="img/email_y.png" alt="Email Me" /></a></li>
+        <li><a href="https://twitter.com/CodeRyann"><img src="../img/twitter_y.png" alt="Twitter Logo" /></a></li>
+        <li><a href="https://dribbble.com/regreen"><img src="../img/dribbble_y.png" alt="Dribbble Logo" /></a></li>
+        <li><a href="https://github.com/ryanngreen"><img src="../img/github_y.png" alt="Github Logo" /></a></li>
+        <li><a href="mailto:me@ryanngreen.com"><img src="../img/email_y.png" alt="Email Me" /></a></li>
       </ul>
     </div>
   </div>
