--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
 
     <div id="work-container">
       <div class="row">
-        <a href="homecoming.html">
+        <a href="work/homecoming.html">
           <div class="column">
-            <img src="img/filler1.jpg" alt="Project Name" />
+            <img src="img/homecoming/hc_place.jpg" alt="SELU Homecoming Site" />
             <div class="work-overview">
-              <p class="work-title">Southeastern Alumni Site</p>
-              <p class="work-spec">Web Design, HTML, CSS <br />
+              <p class="work-title">Southeastern Homecoming Site</p>
+              <p class="work-spec">Web Design, Logo<br />
                 2015</p>
-              <p class="work-desc">A brief description of the project scope and requirements.</p>
+              <p class="work-desc">A website created for Southeastern University's annual Homecoming week.</p>
             </div>
           </div>
         </a>
-        <a href="homecoming.html">
+        <a href="work/timeless.html">
           <div class="column">
-            <img src="img/filler2.jpg" alt="Project Name" />
+            <img src="img/timeless/tv_place.jpg" alt="Timeless Vintage Rentals Site" />
             <div class="work-overview">
-              <p class="work-title">Southeastern Alumni Site</p>
-              <p class="work-spec">Web Design, HTML, CSS <br />
+              <p class="work-title">Timeless Vintage Rentals</p>
+              <p class="work-spec">Web Design, Logo, HTML, CSS, PHP <br />
               2015</p>
-              <p class="work-desc">A brief description of the project scope and requirements.</p>
+              <p class="work-desc">Brand and website redesign for a local wedding rental business.</p>
             </div>
           </div>
         </a>
