Added work nav, added link styles, changed viewport meta

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Ryann Green | Web Design</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
 
@@ -20,18 +21,18 @@
       </label>
       <div id="test">
         <ul id="your-menu">
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Writing</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-          <li><a href="#social">Social</a></li>
+          <li><a class="hover-link orange" href="about.html">About</a></li>
+          <li><a class="hover-link orange" href="work.html">Work</a></li>
+          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <li><a class="hover-link orange" href="index.html#contact">Contact</a></li>
+          <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
       </div>
     </nav>
   </div>
 
   <div id="main-page" class="about-page">
-    <div id="head-container">
+    <div id="head-container" class="yellow-back">
       <div id="head-info">
         <h1>Nice to Meet You</h1>
         <p>Running a business is a busy job, and as important as the web is for your success, it can be complicated and time consuming. That's what I'm here for. I can design and code your website, so that you can make less stops and get better results.</p>
