--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Ryann Green | Web Design</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
 
@@ -20,18 +21,18 @@
       </label>
       <div id="test">
         <ul id="your-menu">
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Writing</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-          <li><a href="#social">Social</a></li>
+          <li><a class="hover-link orange" href="about.html">About</a></li>
+          <li><a class="hover-link orange" href="work.html">Work</a></li>
+          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <li><a class="hover-link orange" href="index.html#contact">Contact</a></li>
+          <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
       </div>
     </nav>
   </div>
 
   <div id="main-page" class="home-page">
-    <div id="head-container">
+    <div id="head-container" class="orange-back">
       <div id="head-info">
         <h1>Design + Develop</h1>
         <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
@@ -78,7 +79,7 @@
 
             <p>A brief description of the project scope and requirements. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque commodo molestie. Donec tincidunt fringilla odio, sit amet consectetur lacus blandit eget. Duis ac nunc a dolor commodo consectetur. Nulla et justo tellus. Sed egestas porttitor enim, quis mattis felis tempor vitae. Aliquam rhoncus congue justo, et porttitor est ultrices eget.</p>
 
-            <p class="more"><a href="#">Read More</a></p>
+            <p class="more"><a class="hover-link pink" href="#">Read More</a></p>
           </div>
 
           <div class="column">
