--- a/work.html
+++ b/work.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Ryann Green | Web Design</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
 
@@ -26,18 +27,18 @@
       </label>
       <div id="test">
         <ul id="your-menu">
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Writing</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-          <li><a href="#social">Social</a></li>
+          <li><a class="hover-link orange" href="about.html">About</a></li>
+          <li><a class="hover-link orange" href="work.html">Work</a></li>
+          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <li><a class="hover-link orange" href="index.html#contact">Contact</a></li>
+          <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
       </div>
     </nav>
   </div>
 
   <div id="main-page" class="works-page">
-    <div id="head-container">
+    <div id="head-container" class="pink-back">
       <div id="head-info">
         <h1>Collected Works</h1>
         <p>I specialize in creating websites for small businesses that are looking to increase their business and improve their online presence. Over the last few years I have worked on a variety of web projects, ranging from solely design, front-end coding, and even creating dynamic sites. </p>
