--- a/work/timeless.html
+++ b/work/timeless.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>Ryann Green | Web Design</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,700italic,900' rel='stylesheet' type='text/css'>
 
@@ -17,7 +18,7 @@
 <body>
   <div id="navigation-container">
     <nav>
-      <a href="index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" /></a>
+      <a href="../index.html"><img id="logo" src="../img/logo.png" alt="Ryann Green Logo" /></a>
       <input type="checkbox" id="mobile-menu" name="menu">
       <label for="mobile-menu">
         <span></span>
@@ -26,11 +27,11 @@
       </label>
       <div id="test">
         <ul id="your-menu">
-          <li><a href="../about.html">About</a></li>
-          <li><a href="../work.html">Work</a></li>
-          <li><a href="../contact.html">Writing</a></li>
-          <li><a href="../index.html#contact">Contact</a></li>
-          <li><a href="#social">Social</a></li>
+          <li><a class="hover-link orange" href="../about.html">About</a></li>
+          <li><a class="hover-link orange" href="../work.html">Work</a></li>
+          <li><a class="hover-link orange" href="contact.html">Writing</a></li>
+          <li><a class="hover-link orange" href="../index.html#contact">Contact</a></li>
+          <li><a class="hover-link orange" href="#social">Social</a></li>
         </ul>
       </div>
     </nav>
@@ -79,6 +80,12 @@
         <h2>Typography</h2>
       </div>
       <img src="../img/timeless/tv_type.jpg" alt="Homecoming Typography" />
+    </div>
+
+    <div id="work-navigation">
+      <p><a class="hover-link orange" href="#">Previous</a></p>
+
+      <p><a class="hover-link orange" href="#">Next</a></p>
     </div>
 
     <a name="social"></a>
