Added Warmth project

--- a/work.html
+++ b/work.html
@@ -70,28 +70,28 @@
           </div>
       </div>
       <div class="row">
-        <a href="homecoming.html">
+        <a href="work/warmth.html">
           <div class="column">
-            <img src="img/filler1.jpg" alt="Project Name" />
+            <img src="img/warmth/wm_place.jpg" alt="Warmth: Knitting" />
             <div class="work-overview">
-              <p class="work-title">Warmth, Hobby Site</p>
-              <p class="work-spec">Design, HTML, CSS, Photography <br />
+              <p class="work-title">Warmth: Knitting</p>
+              <p class="work-spec">Logo, Web Design, HTML, CSS, Photography <br />
                 2014</p>
               <p class="work-desc">A website gathering resources to teach basic knitting skills to the every day visitor.</p>
             </div>
           </div>
         </a>
-        <a href="homecoming.html">
-          <div class="column">
-            <img src="img/filler2.jpg" alt="Project Name" />
-            <div class="work-overview">
+        <!-- <a href="homecoming.html"> -->
+          <div class="column filler">
+            <img src="img/placeholder.png" alt="Placeholder" />
+            <!-- <div class="work-overview">
               <p class="work-title">Southeastern Alumni Site</p>
               <p class="work-spec">Web Design, HTML, CSS <br />
               2015</p>
               <p class="work-desc">A brief description of the project scope and requirements.</p>
-            </div>
+            </div> -->
           </div>
-        </a>
+        <!-- </a> -->
       </div>
     </div>
 
