--- a/work/timeless.html
+++ b/work/timeless.html
@@ -40,8 +40,8 @@
   <div id="main-page" class="highlight-page homecoming">
     <div id="head-container">
       <div id="head-info">
-        <h1>Timeless <br/> Vintage Rentals</h1>
-        <p>I'm Ryann Green. I work on designing and developing for the web. I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+        <h1 class="two-line-header">Timeless <br/> Vintage Rentals</h1>
+        <p>As a modern business, it is extremely to have not only a website, but a website that looks professional and beautiful on any device. This was especially true for Timeless Vintage Rentals, who's website was not mobile friendly and was starting to look dated.</p>
       </div>
 
       <img src="../img/timeless/tv_mock.png" alt="Timeless Vintage Responsive" />
@@ -50,7 +50,7 @@
     <div id="pages-container">
       <div class="highlight-header">
         <h2>Timeless Vintage Desktop</h2>
-        <p>I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+        <p>The main visitor's coming to the Timeless Vintage Rental site are potential clients, mostly bride-to-be's. Keeping that in mind, I decided the inventory would be the prime focus of the site, while also showcasing beautiful wedding shots that Timeless Vintage has been featured in. The use of black and white keeps the style unopposing, and allowing color to pop through when the visitor hovers over the section they are interested in, showing them more and drawing them in.</p>
       </div>
       <img src="../img/timeless/tv_desk_home.jpg" alt="Timeless Vintage Home Page" />
 
@@ -59,8 +59,8 @@
       <img src="../img/timeless/tv_desk_item.jpg" alt="Timeless Vintage Item View" />
 
       <div class="highlight-header">
-        <h2>Timeless Vintage Responsive</h2>
-        <p>I specialize in working with small businesses to help them provide their clients with easily accessible and friendly experiences.</p>
+        <h2>Responsive</h2>
+        <p>From the beginning of the project, it was clear that it would be extremely important that the Timeless Vintage site would be optimized for viewing on multiple devices. As such, the website changes fluidly between any size, making sure that no matter what size screen her visitor's are using, they are getting the best experience.</p>
       </div>
 
       <img class="device" src="../img/timeless/tv_tablet.jpg" alt="Timeless Vintage Item View" />
@@ -83,9 +83,9 @@
     </div>
 
     <div id="work-navigation">
-      <p><a class="hover-link orange" href="#">Previous</a></p>
+      <p><a class="hover-link orange" href="homecoming.html">Previous</a></p>
 
-      <p><a class="hover-link orange" href="#">Next</a></p>
+      <p><a class="hover-link orange" href="warmth.html">Next</a></p>
     </div>
 
     <a name="social"></a>
