--- a/work/warmth.html
+++ b/work/warmth.html
@@ -9,8 +9,9 @@
   <link href="../css/styles.css" rel="stylesheet" type="text/css" />
 
   <style>
-  .highlight-page.homecoming #head-container {
-    background: #42a06c;
+  .highlight-page.warmth #head-container {
+    background: #7f2754;
+    color: white;
   }
   </style>
 </head>
@@ -37,45 +38,49 @@
     </nav>
   </div>
 
-  <div id="main-page" class="highlight-page homecoming">
+  <div id="main-page" class="highlight-page warmth">
     <div id="head-container">
       <div id="head-info">
-        <h1>Homecoming Site</h1>
-        <p>Previously, SELU created a new sub-site each year that was specific to that year's Homecoming theme. This meant each year they were repeating the same process and essentially creating a time drain. Instead, we decided to create a site that would remain consistent, providing a recognizable look, with exchangable pieces for the theme. </p>
+        <h1>Warmth: Knitting</h1>
+        <p>This is a side project that I worked on. Knitting is a hobby of mine, but it's always frustrating to have to search across so many sites to find different information. I couldn't help but think how easy it would be if all the beginner information I needed was on one site. </p>
       </div>
 
-      <img src="../img/homecoming/hc_mock.png" alt="Homecoming Responsive" />
+      <img src="../img/warmth/wm_mock.png" alt="Homecoming Responsive" />
     </div>
 
     <div id="pages-container">
       <div class="highlight-header">
-        <h2>Homecoming Homepage</h2>
-        <p>Most important information is housed on the main page. It serves as the hub for any information someone might be looking for about SELU's Homecoming week and activities. As this is a site that will be live long before Homecoming week, a countdown was extremely important, as well as information about when Homecoming week is, what the theme is, and who is sponsoring it. The semester football schedule can also be found, as well as a photo stream from the previous Homecoming.</p>
-        <p>The other major page included in the new Homecoming site is the events page. Separated by day and updated for the current day of Homecoming week, each day's activities are easy to look over.</p>
+        <h2>Warmth Pages</h2>
+        <p>The project started with the idea of knitting and what this site/brand could be called. I settled on the logo fairly quickly from there, using the most basic knitting stitch for the logo mark and a calm, relaxed color palette.</p>
+        <p>I decided to make a homepage have multiple calls-to-action so that the visitor would be more likely to stay on the site and click through to an interior page. The subpages include many sources for information that a beginner knitter might be looking for like different end results they can make while practicing, tutorials on basic stitches and materials, as well as benefits to knitting for people who may be on the fence.</p>
       </div>
-      <img src="../img/homecoming/hc_feat.jpg" alt="Homecoming Home Page" />
+      <img src="../img/warmth/wm_home.jpg" alt="Warmth Home Page" />
 
-      <img class="inner-img" src="../img/homecoming/hc_events.jpg" alt="Homecoming Events Page" />
+      <img class="inner-img" src="../img/warmth/wm_scarves.jpg" alt="Warmth Inner Page" />
+
+      <img class="inner-img" src="../img/warmth/wm_tutorials.jpg" alt="Warmth Inner Page" />
+
+      <img src="../img/warmth/wm_stock.jpg" alt="Warmth Specific Page" />
     </div>
 
     <div id="color-container">
       <div class="highlight-header">
         <h2>Color Palette</h2>
       </div>
-      <img src="../img/homecoming/hc_colors.jpg" alt="Homecoming Color Scheme" />
+      <img src="../img/warmth/wm_colors.jpg" alt="Homecoming Color Scheme" />
     </div>
 
     <div id="type-container">
       <div class="highlight-header">
         <h2>Typography</h2>
       </div>
-      <img src="../img/homecoming/hc_type.jpg" alt="Homecoming Typography" />
+      <img src="../img/warmth/wm_type.png" alt="Homecoming Typography" />
     </div>
 
     <div id="work-navigation">
-      <p><a class="hover-link orange" href="warmth.html">Previous</a></p>
+      <p><a class="hover-link orange" href="timeless.html">Previous</a></p>
 
-      <p><a class="hover-link orange" href="timeless.html">Next</a></p>
+      <p><a class="hover-link orange" href="homecoming.html">Next</a></p>
     </div>
 
     <a name="social"></a>
